Corrects the alignment of the textbox in the th with the textbox in the td, when the sorting is disaabled.

--- a/modules/contentbox/modules/contentbox-admin/resources/assets/sass/contentbox.scss
+++ b/modules/contentbox/modules/contentbox-admin/resources/assets/sass/contentbox.scss
@@ -45,7 +45,9 @@ p{
 .table > thead > tr > th {
 	border-bottom: 0px solid #ddd;
 }
-
+.table.dataTable thead > tr > th.sorting_disabled {
+	padding-right: 8px;
+}
 .breakCellWords{
 	max-width: 1px;
 	word-wrap: break-word;
